syntax = "proto3";

package com.cognite.beam.proto;

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message Relationship {
    enum ResourceType {
        ASSET = 0;
        TIME_SERIES = 1;
        FILE = 2;
        EVENT = 3;
        SEQUENCE = 4;
    }

    string external_id = 1;
    optional string source_external_id = 2;
    ResourceType source_type = 3;
    optional string target_external_id = 4;
    ResourceType target_type = 5;
    optional int64 start_time = 6;
    optional int64 end_time = 7;
    optional float confidence = 8;
    optional int64 data_set_id = 9;
    repeated string labels = 10;
    optional int64 created_time = 11;
    optional int64 last_updated_time = 12;
}
